<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="1200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="serif"
                android:text="@string/complete_your"
                android:textSize="30sp"
                android:layout_marginTop="150dp"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="serif"
                android:text="@string/account_setup"
                android:textSize="30sp"
                android:layout_marginTop="190dp"
                android:layout_marginStart="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvregis_employee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:paddingStart="12dp"
                    android:text="@string/i_am_a_user"
                    android:textSize="13sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/or"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/employee_regis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:paddingStart="15dp"
                    android:text="@string/register_as_employee"
                    android:textSize="15sp" />

            </LinearLayout>

            <!--            ini nambahin background textbox-->
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/textbackground"
                android:layout_marginTop="280dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/textbackground"
                android:layout_marginTop="350dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/textbackground"
                android:layout_marginTop="410dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/textbackground"
                android:layout_marginTop="470dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/textbackground"
                android:layout_marginTop="530dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <EditText
                android:id="@+id/reg_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:hint="@string/first_name"
                android:textColorHint="@color/white"
                android:fontFamily="@font/serif_regular"
                android:paddingStart="20dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginTop="280dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/reg_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:hint="@string/last_name"
                android:textColorHint="@color/white"
                android:fontFamily="@font/serif_regular"
                android:paddingStart="20dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginTop="350dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:hint="@string/email_address"
                android:textColorHint="@color/white"
                android:fontFamily="@font/serif_regular"
                android:paddingStart="20dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginTop="410dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:fontFamily="@font/serif_regular"
                android:paddingStart="20dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginTop="470dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/conf_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:lines="1"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:hint="@string/confirmation_password"
                android:textColorHint="@color/white"
                android:fontFamily="@font/serif_regular"
                android:paddingStart="20dp"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginTop="530dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="590dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:paddingStart="12dp"
                    android:text="@string/already_have_account"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/login_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:paddingStart="15dp"
                    android:text="@string/login_now"
                    android:textSize="13sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="640dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/serif_regular"
        android:textSize="20sp"
        android:visibility="visible"
        android:text="@string/register"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/confirm_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="200dp"
        android:paddingBottom="200dp"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:focusable="false"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/regis_as_employee" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/id" />

        <Button
            android:id="@+id/sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:gravity="center"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel" />

    </LinearLayout>
</RelativeLayout>