<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="0dp"
    android:backgroundTint="@color/lightBrown"
    app:cardElevation="2dp"
    app:cardCornerRadius="15dp">

    <ImageView
        android:id="@+id/cafe_image"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/kopi_kulo"
        android:contentDescription="@string/none" />

    <TextView
        android:id="@+id/cafe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Cofee Kulo"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cafe_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/alamat_cafe"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="20"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/seat_available"
        android:textColor="@color/white" />

</androidx.cardview.widget.CardView>