<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".CafeInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/festina_lente"
            android:paddingStart="100dp"
            android:paddingEnd="20dp"
            android:text="@string/near_me"
            android:textColor="@color/mediumBrown"
            android:textSize="25sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/mediumBrown"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_location"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingTop="0dp"
                android:paddingStart="80dp"
                android:paddingEnd="20dp"
                android:text="@string/alamat"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:itemCount="5"
                    tools:listitem="@layout/cafe_list_view" />

            </RelativeLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>


</RelativeLayout>